--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,11 @@
   .cell.miss {
     background-color: rgb(128, 128, 128);
   }
+  .App {
+    text-align: center;
+    background-image: url('new.webp');
+    background-repeat: no-repeat;  /* Prevents repeating the image */
+    background-size: cover;       /* Ensures the image covers the whole page */
+    background-position: center;  /* Centers the image */
+    min-height: 100vh;            /* Makes sure the background covers the entire viewport height */
+}
